v1.6.3 correction alignement (plat + prix)
git-svn-id: https://plugins.svn.wordpress.org/eewee-restaurant-menu/trunk@778896 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 /**
  * SOMMAIRE :
  * - MENU
- * - 
+ * - PLAT
  * - TABLE
- * - ...
+ * - DIVERS
  */
 
 /* MENU */ 
@@ -12,7 +12,8 @@
 .restaurant-menu .plat{}
 .restaurant-menu .ingredients{ font-style: italic; font-size: 0.8em; color: grey; }
 
- 
+ /* PLAT */
+ .p_plat{ margin: 0; }
 
 /* TABLE */
 table th.c, table td.c{ text-align: center; }
